egonlang-core/res/examples/invalid/if_else_expression_unit_expr_as_cond_then.eg
if () ();

// out: SyntaxError: unexpected ")"; expected: ["\"!\"", "\"(\"", "\"-\"", "\"..\"", "\"[\"", "\"false\"", "\"true\"", "identifier", "number", "string"]